// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIcon should generate the large icon correctly 1`] = `
<span
  aria-hidden="true"
  class="large-class"
  title="large-title"
>
  <svg
    height="48"
    version="1.1"
    viewBox="0 0 48 48"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      transform="scale(3)"
    >
      <path />
    </g>
  </svg>
</span>
`;

exports[`createIcon should generate the medium icon correctly 1`] = `
<span
  aria-hidden="true"
  class="medium-class"
  title="medium-title"
>
  <svg
    height="32"
    version="1.1"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      transform="scale(2)"
    >
      <path />
    </g>
  </svg>
</span>
`;

exports[`createIcon should generate the small icon correctly 1`] = `
<span
  aria-hidden="true"
  class="small-class"
  title="small-title"
>
  <svg
    height="16"
    version="1.1"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      transform="scale(1)"
    >
      <path />
    </g>
  </svg>
</span>
`;
